Fixing app names

--- a/pebble/appinfo.json
+++ b/pebble/appinfo.json
@@ -1,7 +1,7 @@
 {
   "uuid": "724ea8a1-1548-47ba-ba21-8d10a2183cf0",
-  "shortName": "New Relic",
-  "longName": "New Relic Monitor",
+  "shortName": "Magellan",
+  "longName": "Magellan Monitoring",
   "companyName": "Soutaro Matsumoto",
   "versionCode": 1,
   "versionLabel": "1.0",
